@@ -1,0 +1,36 @@
+#!/usr/bin/env bash
+
+# Author:   Zhang Huangbin (zhb _at_ iredmail.org)
+
+#---------------------------------------------------------------------
+# This file is part of iRedMail, which is an open source mail server
+# solution for Red Hat(R) Enterprise Linux, CentOS, Debian and Ubuntu.
+#
+# iRedMail is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# iRedMail is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with iRedMail.  If not, see <http://www.gnu.org/licenses/>.
+#---------------------------------------------------------------------
+#
+# ---------- OPENDMARC -----------
+#
+export OPENDMARC_RC_SCRIPT_NAME='opendmarc'
+
+export DMARC_DB_NAME='dmarc'
+export DMARC_DB_USER="${DMARC_DB_USER:=dmarc}"
+
+export OPENDMARC_CONF='/etc/opendmarc.conf'
+export OPENDMARC_CONF_DIR='/etc/opendmarc'
+export OPENDMARC_SPOOL_DIR='/var/spool/opendmarc'
+export OPENDMARC_CONF_IGNORE_HOSTS="${OPENDMARC_CONF_DIR}/ignore.hosts"
+export OPENDMARC_CONF_PUBLIC_SUFFIX_LIST="${OPENDMARC_CONF_DIR}/public_suffix_list.dat"
+export OPENDMARC_CONF_HISTORY_FILE="${OPENDMARC_SPOOL_DIR}/opendmarc.dat"
+export OPENDMARC_PID_FILE='/var/run/opendmarc/opendmarc.pid'
