@@ -1,0 +1,105 @@
+# You can find more parameters and comments from official manual page:
+# http://www.trusteddomain.org/opendmarc/opendmarc.conf.5.html
+
+Background true
+UserID PH_SYS_USER_OPENDMARC:PH_SYS_GROUP_OPENDMARC
+Syslog true
+SyslogFacility PH_IREDMAIL_SYSLOG_FACILITY
+PidFile PH_OPENDMARC_PID_FILE
+DNSTimeout 5
+UMask 007
+AuthservIDWithJobID false
+AutoRestart false
+EnableCoreDumps false
+FailureReports false
+
+# Ignore existing header of SPF check and perform the check by opendmarc.
+SPFIgnoreResults true
+SPFSelfValidate true
+
+Socket inet:PH_OPENDMARC_PORT@PH_OPENDMARC_BIND_HOST
+IgnoreHosts PH_OPENDMARC_CONF_IGNORE_HOSTS
+HistoryFile PH_OPENDMARC_CONF_HISTORY_FILE
+PublicSuffixList PH_OPENDMARC_CONF_PUBLIC_SUFFIX_LIST
+
+# Ignore mail sent from authenticated clients (i.e., those that used SMTP AUTH).
+# Defaults to false.
+IgnoreAuthenticatedClients true
+
+# Record all received messages instead of only messages which has a DMARC record.
+RecordAllMessages true
+
+# Sets the debug level to be requested from the milter library.
+# Defaults to 0 (disable).
+MilterDebug 0
+
+##  AuthservID (string)
+##  	defaults to MTA name
+##
+##  Sets the "authserv-id" to use when generating the Authentication-Results:
+##  header field after verifying a message.  If the string "HOSTNAME" is
+##  provided, the name of the host running the filter (as returned by the
+##  gethostname(3) function) will be used.
+#
+AuthservID PH_HOSTNAME
+
+##  TrustedAuthservIDs string
+##  	default HOSTNAME
+##
+##  Specifies one or more "authserv-id" values to trust as relaying true
+##  upstream DKIM and SPF results.  The default is to use the name of
+##  the MTA processing the message.  To specify a list, separate each entry
+##  with a comma.  The key word "HOSTNAME" will be replaced by the name of
+##  the host running the filter as reported by the gethostname(3) function.
+#
+#TrustedAuthservIDs PH_HOSTNAME
+
+##  IgnoreMailFrom domain[,...]
+##  	default (none)
+##
+##  Gives a list of domain names whose mail (based on the From: domain) is to
+##  be ignored by the filter.  The list should be comma-separated.  Matching
+##  against this list is case-insensitive.  The default is an empty list,
+##  meaning no mail is ignored.
+#
+# IgnoreMailFrom example.com
+
+##  RejectFailures { true | false }
+##  	default "false"
+##
+##  If set, messages will be rejected if they fail the DMARC evaluation, or
+##  temp-failed if evaluation could not be completed.  By default, no message
+##  will be rejected or temp-failed regardless of the outcome of the DMARC
+##  evaluation of the message.  Instead, an Authentication-Results header
+##  field will be added.
+#
+RejectFailures true
+
+##  ReportCommand string
+##  	default "/usr/sbin/sendmail -t"
+##
+##  Indicates the shell command to which failure reports should be passed for
+##  delivery when "FailureReports" is enabled.
+#
+# ReportCommand /usr/sbin/sendmail -t
+
+##  RequiredHeaders { true | false }
+##  	default "false"
+##
+##  If set, the filter will ensure the header of the message conforms to the
+##  basic header field count restrictions laid out in RFC5322, Section 3.6.
+##  Messages failing this test are rejected without further processing.  A
+##  From: field from which no domain name could be extracted will also be
+##  rejected.
+#
+# RequiredHeaders false
+
+##  SoftwareHeader { true | false }
+##  	default "false"
+##
+##  Causes the filter to add a "DMARC-Filter" header field indicating the
+##  presence of this filter in the path of the message from injection to
+##  delivery.  The product's name, version, and the job ID are included in
+##  the header field's contents.
+#
+SoftwareHeader true
